# swr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: core.h  pipeline.h
source/: CMakeLists.txt  main.cpp
src/: core.h  main.cpp  obj_loader.h
